--- a/styles/knw-army.css
+++ b/styles/knw-army.css
@@ -1,19 +1,19 @@
 @font-face {
         font-family: 'Roboto';
         font-style: normal;
-        src: url('fonts/Roboto-Regular.woff2') format('woff2');
+        src: url('/fonts/Roboto-Regular.woff2') format('woff2');
 }
 
 @font-face {
         font-family: 'Roboto Condensed';
         font-style: normal;
-        src: url('fonts/RobotoCondensed-Regular.woff2') format('woff2');
+        src: url('/fonts/RobotoCondensed-Regular.woff2') format('woff2');
 }
 
 @font-face {
         font-family: 'Roboto Slab';
         font-style: normal;
-        src: url('fonts/Roboto-Slab-Regular.woff2') format('woff2');
+        src: url('/fonts/Roboto-Slab-Regular.woff2') format('woff2');
 }
 
 
