--- a/templates/warfare-sheet.hbs
+++ b/templates/warfare-sheet.hbs
@@ -168,9 +168,11 @@
         <div class="armyUnit-mov">
           <img class="armyUnitsheetimg" src="/modules/knw-army/Images/movement-arrow.png">
           {{#if system.config }}
-          <input type='text' name='system.mov' value='{{ system.mov }}' data-dtype='Number' />
+          <div class="armyUnit-mov-combat"><i class="fas fa-swords"></i><input type='text' name='system.mov' value='{{ system.mov }}' data-dtype='Number' /></div>
+          <div class="armyUnit-mov-land"><i class="fas fa-person-hiking"></i><input type='text' name='system.attributes.movement.walk' value='{{ system.attributes.movement.walk }}' data-dtype='Number' /></div>
           {{else}}
-          <div>{{system.mov}}</div>
+          <div class="armyUnit-mov-combat"><i class="fas fa-swords"></i>&nbsp;{{ system.mov }}</div>
+          <div class="armyUnit-mov-land"><i class="fas fa-person-hiking"></i>&nbsp;{{ system.attributes.movement.walk }}</div>
           {{/if}}
         </div>
       </div>
